--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node server/index.js"
+    "start": "node server/index.js",
+     "dev": "nodemon server/index.js"
   },
   "dependencies": {
     "express": "^4.17.1"
@@ -12,6 +13,19 @@
   "devDependencies": {
     "nodemon": "2.0.2"
   },
+
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/meel209/web_ser_inClass"
+  },
+
+
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+
+  "bugs": {
+    "url": "https://github.com/meel209/web_ser_inClass"
+  },
+
+  "homepage": "https://github.com/meel209/web_ser_inClass#readme"
 }
